2011-06-10  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r88530.
        http://trac.webkit.org/changeset/88530
        https://bugs.webkit.org/show_bug.cgi?id=62440

        qt build was broken (Requested by loislo on #webkit).

        * inspector/report-protocol-errors-expected.txt:
        * inspector/report-protocol-errors.html:

2011-06-09  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: protocol: json: Whitespace can be inserted between any pair of tokens.
        https://bugs.webkit.org/show_bug.cgi?id=62377

        * inspector/report-protocol-errors-expected.txt:
        * inspector/report-protocol-errors.html:

2011-06-10  Mahesh Kulkarni  <mahesh.kulkarni@nokia.com>

        Reviewed by Antonio Gomes.

        [Qt] LayoutTests/fast/history/history_reload.html failing
        https://bugs.webkit.org/show_bug.cgi?id=62369

        Unskipping. Generating click of button element in generic way.
        Remove hardcoding of click co-ordinates to avoid native font differences.

        * fast/history/history_reload.html:
        * platform/qt/Skipped:

2011-06-09  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] The profiler test is entirely unrelated to the original change r88337
        and seems to be highly related to https://bugs.webkit.org/show_bug.cgi?id=60881

        https://bugs.webkit.org/show_bug.cgi?id=62278

        Last attempt to make buildbot happy against crazy flakiness near inspector tests. :-/

        * platform/qt/Skipped: Disable all inspector tests until fix.

2011-06-09  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] The profiler test is entirely unrelated to the original change r88337
        and seems to be highly related to https://bugs.webkit.org/show_bug.cgi?id=60881

        https://bugs.webkit.org/show_bug.cgi?id=62278

        One more attempt to make buildbot happy
        against crazy flakiness near inspector tests. :-/
