@@ -101,4 +101,94 @@ Tests that InspectorBackendDispatcher is catching incorrect messages.
     }
     id : 7
 }
+{
+    error : {
+        code : -32601
+        message : "Method not found."
+        data : [
+            "Invalid method name was received. 'Page.test' wasn't found."
+        ]
+    }
+    id : 8
+}
+{
+    error : {
+        code : -32601
+        message : "Method not found."
+        data : [
+            "Invalid method name was received. 'Page.test' wasn't found."
+        ]
+    }
+    id : 9
+}
+{
+    error : {
+        code : -32601
+        message : "Method not found."
+        data : [
+            "Invalid method name was received. 'Page.test' wasn't found."
+        ]
+    }
+    id : 10
+}
+{
+    error : {
+        code : -32601
+        message : "Method not found."
+        data : [
+            "Invalid method name was received. 'Page.test' wasn't found."
+        ]
+    }
+    id : 11
+}
+{
+    error : {
+        code : -32601
+        message : "Method not found."
+        data : [
+            "Invalid method name was received. 'Page.test' wasn't found."
+        ]
+    }
+    id : 12
+}
+{
+    error : {
+        code : -32601
+        message : "Method not found."
+        data : [
+            "Invalid method name was received. 'Page.test' wasn't found."
+        ]
+    }
+    id : 13
+}
+{
+    error : {
+        code : -32601
+        message : "Method not found."
+        data : [
+            "Invalid method name was received. 'Page.test' wasn't found."
+        ]
+    }
+    id : 14
+}
+{
+    error : {
+        code : -32601
+        message : "Method not found."
+        data : [
+            "Invalid method name was received. 'Page.test' wasn't found."
+        ]
+    }
+    id : 15
+}
+{
+    error : {
+        code : -32601
+        message : "Method not found."
+        data : [
+            "Invalid method name was received. 'Page.test' wasn't found."
+        ]
+    }
+    id : 16
+}
 
