@@ -16,6 +16,15 @@ function test()
         '{"id":5,"method":"Page.getResourceContent","params":[]}',
         '{"id":6,"method":"Page.getResourceContent","params":{}}',
         '{"id":7,"method":"Page.getResourceContent","params":{"frameId":"not a number"}}',
+        '{"id":8,"method":"Page.test"}',
+        '{"id":9,"method":"Page.test" }',
+        '{"id":10,"method": "Page.test" }',
+        '{"id":11,"method" : "Page.test" }',
+        '{"id":12, "method" : "Page.test" }',
+        '{"id": 13, "method" : "Page.test" }',
+        '{"id" : 14, "method" : "Page.test" }',
+        '{ "id" : 15, "method" : "Page.test" }',
+        '{  "id"\n :\r 16,\t "method"\f :\v "Page.test" }',
     ];
     var numberOfReports = 0;
 
