@@ -1,3 +1,12 @@
+2011-06-11-06-09  Ilya Tikhonovsky  <loislo@chromium.org>
+
+        Reviewed by Yury Semikhatsky.
+
+        Web Inspector: protocol: json: Whitespace can be inserted between any pair of tokens.
+        https://bugs.webkit.org/show_bug.cgi?id=62377
+
+        * inspector/InspectorValues.cpp:
+
 2011-06-10  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r88530.
